--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,24 +1,24 @@
 tests_config:
 
-######################################### LEADS MODULE ###################################################
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  directive: reload_configuration
-#  class: LeadModuleTest
-#  tests:
-#    - test_perform_convert_lead   # Creates a lead and converts it to a client
-#
-############################################# CLIENTS #####################################################
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
-#  class: DepositTestCRM
-#  tests:
-#    - test_make_deposit_crm  # make a deposit into a trading account from the crm
-#
-################################################ API #######################################################
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
+    - test_perform_convert_lead   # Creates a lead and converts it to a client
+
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
+  class: DepositTestCRM
+  tests:
+    - test_make_deposit_crm  # make a deposit into a trading account from the crm
 
 - module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
   class: CreateNewCustomer
   tests:
-    - test_autoassign_create_new_lead
-    - test_autoassign_create_new_customer
+    - test_api_create_new_lead
+    - test_api_create_new_customer
+
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+  class: CheckModules
+  tests:
+    - test_check_sprint_version
