--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
 #
 #- name: ptbanc
 #  config_file: ptbanc.yml
@@ -9,5 +9,5 @@ brands:
 #- name: trade99
 #  config_file: trade99.yml
 
-- name: gigafx
-  config_file: gigafx.yml
+#- name: gigafx
+#  config_file: gigafx.yml
