--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,14 +3,14 @@ brands:
 #- name: brokerz
 #  config_file: brokerz.yml
 
-- name: gigafx
-  config_file: gigafx.yml
+#- name: gigafx
+#  config_file: gigafx.yml
 #
 #- name: ptbanc
 #  config_file: ptbanc.yml
 #
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
 #
 #- name: kontofx
 #  config_file: kontofx.yml
