--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -11,14 +11,14 @@ tests_config:
 #    - test_searching_by_columns
 #
 ######################################## FILTERS TESTS ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-#  class: FilterModulesTest
-#  tests:
-#    - test_create_filter_clients_module
-#    - test_create_filter_documents_module
-#    - test_create_filter_leads_module
-#    - test_create_filter_help_desk
-#    - test_create_filter_trading_account_module
+- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
+  class: FilterModulesTest
+  tests:
+    - test_create_filter_clients_module
+    - test_create_filter_documents_module
+    - test_create_filter_leads_module
+    - test_create_filter_help_desk
+    - test_create_filter_trading_account_module
 
 ########################################## LEADS ###################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
@@ -194,11 +194,11 @@ tests_config:
 #    - test_delete_workflow
 #
 ########################################### USER_MANAGEMENT #########################################
-- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
-  class: UserManagementTest
-  tests:
-    - test_create_user
-    - test_delete_user
+#- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
+#  class: UserManagementTest
+#  tests:
+#    - test_create_user
+#    - test_delete_user
 #
 ########################################### DOCUMENTS MODULE ###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
