--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -11,15 +11,15 @@ tests_config:
 #    - test_searching_by_columns
 #
 ######################################## FILTERS TESTS ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-  class: FilterModulesTest
-  tests:
-    - test_create_filter_clients_module
-    - test_create_filter_documents_module
-    - test_create_filter_leads_module
-    - test_create_filter_help_desk
-    - test_create_filter_trading_account_module
-
+#- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
+#  class: FilterModulesTest
+#  tests:
+#    - test_create_filter_clients_module
+#    - test_create_filter_documents_module
+#    - test_create_filter_leads_module
+#    - test_create_filter_help_desk
+#    - test_create_filter_trading_account_module
+#
 ########################################## LEADS ###################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
 #  class: TabLeadsModuleCRM
@@ -201,9 +201,9 @@ tests_config:
 #    - test_delete_user
 #
 ########################################### DOCUMENTS MODULE ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
-#  class: DocumentModuleTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
+  class: DocumentModuleTest
+  tests:
 #    - test_searching_by_columns
-#    - test_open_tabs
+    - test_open_tabs
 #    - test_sorting
