--- a/src/test/python/resources/config/tests5.yml
+++ b/src/test/python/resources/config/tests5.yml
@@ -15,3 +15,8 @@ tests_config:
   tests:
     - test_crm_configurations_pages_loading
 
+###################################### SEND MAIL FROM CLIENT'S DETAILS ##########################
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Send_Email
+  class: SendEmailTestCRM
+  tests:
+    - test_send_email # preconditions: convert lead
