--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -15,13 +15,13 @@ tests_config:
 #    - test_verify_accounts_in_crm
 #    - test_switch_between_accounts_ca
 #
-#- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
-#  class: PersonalDetailsUpdateTestCA
-#  tests:
-#    - test_update_personal_details_in_ca
-#    - test_personal_details_were_updated_in_crm
-#    - test_update_personal_details_in_crm
-#    - test_personal_details_were_updated_in_ca
+- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+  class: PersonalDetailsUpdateTestCA
+  tests:
+    - test_update_personal_details_in_ca
+    - test_personal_details_were_updated_in_crm
+    - test_update_personal_details_in_crm
+    - test_personal_details_were_updated_in_ca
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
 #  class: CreateSupportTicketTestCa
