--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
 #
 #- name: ptbanc
 #  config_file: ptbanc.yml
@@ -15,8 +15,8 @@ brands:
 #- name: brokerz
 #  config_file: brokerz.yml
 #
-#- name: gigafx
-#  config_file: gigafx.yml
+- name: gigafx
+  config_file: gigafx.yml
 
 #- name: trade99
 #  config_file: trade99.yml
