--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,8 +3,8 @@ brands:
 #- name: newforexstage2
 #  config_file: newforexstage2.yml
 #
-#- name: ptbanc
-#  config_file: ptbanc.yml
+- name: ptbanc
+  config_file: ptbanc.yml
 #
 #- name: q8
 #  config_file: q8.yml
@@ -15,8 +15,8 @@ brands:
 #- name: brokerz
 #  config_file: brokerz.yml
 #
-- name: gigafx
-  config_file: gigafx.yml
+#- name: gigafx
+#  config_file: gigafx.yml
 
 #- name: trade99
 #  config_file: trade99.yml
