--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,9 +1,9 @@
 tests_config:
 
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
-  tests:
-    - test_check_sign_up
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
 #    - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
 #
@@ -15,13 +15,13 @@ tests_config:
 #    - test_verify_accounts_in_crm
 #    - test_switch_between_accounts_ca
 #
-- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
-  class: PersonalDetailsUpdateTestCA
-  tests:
-    - test_update_personal_details_in_ca
-    - test_personal_details_were_updated_in_crm
-    - test_update_personal_details_in_crm
-    - test_personal_details_were_updated_in_ca
+#- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+#  class: PersonalDetailsUpdateTestCA
+#  tests:
+#    - test_update_personal_details_in_ca
+#    - test_personal_details_were_updated_in_crm
+#    - test_update_personal_details_in_crm
+#    - test_personal_details_were_updated_in_ca
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
 #  class: CreateSupportTicketTestCa
@@ -29,3 +29,9 @@ tests_config:
 #    - test_create_ticket
 #    - test_check_and_update_ticket_in_crm
 #    - test_check_updated_ticket_in_ca
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
+  class: StrattonQuestionnaire
+  tests:
+#    - test_customer_classification_empty
+    - test_customer_classification_blocked
