--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -6,11 +6,11 @@ brands:
 #- name: ptbanc
 #  config_file: ptbanc.yml
 #
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
 #
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 #
 #- name: brokerz
 #  config_file: brokerz.yml
