--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -48,7 +48,7 @@ tests_config:
 #  class: LeadModuleTest
 #  tests:
 #    - test_perform_convert_lead   # Creates a lead and converts it to a client
-#
+
 #################################### CLIENTS ###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
 #  class: SearchingClientsTestCRM
@@ -66,14 +66,14 @@ tests_config:
 #    - test_clients_mass_assign
 #
 ###################################### TASKS ##################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
-  class: AddEventTaskModule
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
+#  class: AddEventTaskModule
+#  tests:
 #    - test_email_icon
 #    - test_sms_icon
 #    - test_mass_edit_tasks
 #    - test_searching_by_columns
-    - test_sorting_columns
+#    - test_sorting_columns
 #
 ####################################### TASKS CALENDAR VIEW ########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
@@ -108,7 +108,7 @@ tests_config:
 #  tests:
 #    - test_make_deposit_crm  # make a deposit into a trading account from the crm
 #    - test_make_deposit_for_client_crm
-
+#
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Withdraw_CRM
 #  class: WithdrawTest
 #  tests:
