--- a/src/test/python/resources/config/tests3.yml
+++ b/src/test/python/resources/config/tests3.yml
@@ -1,14 +1,17 @@
 tests_config:
 
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-  class: CalendarView
+###################################### MODULES ARE OPENS #########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+  class: CheckModules
   tests:
-    - test_check_day_tab
-    - test_check_week_tab
-    - test_check_month_tab
-- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-  class: TabFinancialTransaction
+    - test_check_dashboard
+    - test_check_leaderboard
+    - test_check_user_management
+    - test_my_dashboard_loading
+    - test_audit_logs_loading
+
+##################################### CRM CONFIGURATIONS #########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
+  class: CRMConfigurationsTest
   tests:
-    - test_check_all_tab_from_financial_transactions
-    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
-    - test_check_search_via_button # Check search using search button
+    - test_crm_configurations_pages_loading
