--- a/src/test/python/resources/config/tests6.yml
+++ b/src/test/python/resources/config/tests6.yml
@@ -1,5 +1,12 @@
 tests_config:
 
+############################################ CONVERT LEAD ############################################
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
+    - test_perform_convert_lead   # Create lead and converts it to a client
+
 ############################################# TASKS ##################################################
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
   class: AddInteraction
