--- a/src/test/python/resources/config/tests8.yml
+++ b/src/test/python/resources/config/tests8.yml
@@ -1,12 +1,12 @@
 tests_config:
 
 ######################################### AUTOASSIGN MODULE #############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
-#  class: AutoAssignModuleTest
-#  tests:
-#    - test_add_auto_assign_rule_lead
-#    - test_add_auto_assign_rule_client
-#    - test_perform_delete_rule
+- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
+  class: AutoAssignModuleTest
+  tests:
+    - test_add_auto_assign_rule_lead
+    - test_add_auto_assign_rule_client
+    - test_perform_delete_rule
 
 ######################################### WORKFLOWS MODULE ##############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
