--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -12,7 +12,7 @@ TasksPage:
 FinancialTransactionsPage:
   client_name_element:  "(//td[3]/div/a)[%s]"
   transaction_type_element : "(//*[@id='listBody']//tr/td[5])[%s]"
-  transaction_type_field: "(//div/div[1]/ul/li[1]/div/input)[1]"
+  transaction_type_field: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/ul/li[1]/div/input"
   transaction_type_drop_down: "//td[5]/div/div[1]/button"
   trading_account_element: "(//*[@id='listBody']//tr/td[3])[%s]//a"
   modified_time_element: "(//*[@id='listBody']//tr/td[10])[%s]"
