--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
 #
 #- name: ptbanc
 #  config_file: ptbanc.yml
@@ -20,3 +20,6 @@ brands:
 
 #- name: trade99
 #  config_file: trade99.yml
+
+- name: dax-300
+  config_file: dax-300.yml
