--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,10 +1,10 @@
 tests_config:
 
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
-  tests:
-    - test_check_sign_up
-    - test_check_email_sign_up
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
+#    - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
@@ -30,9 +30,10 @@ tests_config:
 #    - test_check_and_update_ticket_in_crm
 #    - test_check_updated_ticket_in_ca
 
-#- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
-#  class: StrattonQuestionnaire
-#  tests:
+- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
+  class: StrattonQuestionnaire
+  tests:
 #    - test_customer_classification_empty
 #    - test_customer_classification_blocked
 #    - test_customer_classification_negative
+    - test_customer_classification_retail
