--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -4,21 +4,21 @@ tests_config:
 #  class: AutorizationProcess
 #  tests:
 #    - test_autorization_process
-
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
-  class: CreateNewCustomer
-  tests:
-    - test_create_new_customer
-
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
-  class: ReadCustomerDetails
-  tests:
-    - test_read_customer_details
-
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
-  class: UpdateCustomer
-  tests:
-    - test_update_customer
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
+#  class: CreateNewCustomer
+#  tests:
+#    - test_create_new_customer
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
+#  class: ReadCustomerDetails
+#  tests:
+#    - test_read_customer_details
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
+#  class: UpdateCustomer
+#  tests:
+#    - test_update_customer
 
 - module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
   class: CreateLead
