--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,25 +1,25 @@
 brands:
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
-
-- name: ptbanc
-  config_file: ptbanc.yml
-
-- name: q8
-  config_file: q8.yml
-
-- name: kontofx
-  config_file: kontofx.yml
-
-- name: brokerz
-  config_file: brokerz.yml
-
-- name: gigafx
-  config_file: gigafx.yml
-
-- name: trade99
-  config_file: trade99.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
+#
+#- name: ptbanc
+#  config_file: ptbanc.yml
+#
+#- name: q8
+#  config_file: q8.yml
+#
+#- name: kontofx
+#  config_file: kontofx.yml
+#
+#- name: brokerz
+#  config_file: brokerz.yml
+#
+#- name: gigafx
+#  config_file: gigafx.yml
+#
+#- name: trade99
+#  config_file: trade99.yml
 
 - name: dax-300
   config_file: dax-300.yml
